--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- Poppins Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet" />
@@ -146,9 +146,8 @@
                                 aria-label="Slide 3"></button>
                         </div>
                         <div class="carousel-inner">
-                            <div
-                                class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.webp"
+                            <div class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/1caa113d3b2e51311fd74dfc4f7d938b.png"
                                     class="d-none d-lg-block img-fluid col-12" alt="images" loading="lazy" />
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/responsive_hero.png" class="d-md-none img-fluid col-12"
                                     alt="images" loading="lazy" />
@@ -767,7 +766,7 @@
                                                     class="link-light text-decoration-none">Automotive Products</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="#" class="link-light text-decoration-none">Industrial
+                                                <a href="industrial/" class="link-light text-decoration-none">Industrial
                                                     Products</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
