Fixed the home page hero images issue,

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                             </div>
                             <div
                             class="carousel-item  hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                            <img src="https://ik.imagekit.io/ecomax/assets/images/home/e7cceeee0a2578c2064ff176b7f146bc.webp"
+                            <img src="/assets/images/home/e7cceeee0a2578c2064ff176b7f146bc.png"
                                 class="d-none d-lg-block img-fluid col-12" alt="images" loading="lazy" />
-                            <img src="assets/images/home/Mobile-Hero2.png" class="d-md-none img-fluid col-12"
+                            <img src="https://ik.imagekit.io/ecomaxassets/images/home/Mobile-Hero2.png" class="d-md-none img-fluid col-12"
                                 alt="images" loading="lazy" />
                             <img src="https://ik.imagekit.io/ecomax/assets/images/home/Tab-Hero2.png"
                                 class="d-none d-md-block d-lg-none img-fluid col-12" alt="images" loading="lazy" />
@@ -564,7 +564,7 @@
                                                 aria-expanded="true" aria-controls="collapseOne">
                                                 <span class="col-11 Mission_title">Vision</span>
                                                 <span class="col-1 justify-content-center d-flex Vision_icon"><i
-                                                        class="fa-solid fa-minus"></i></span>
+                                                    class="fa-solid fa-plus"></i></span>
                                             </button>
                                         </h2>
                                         <div id="collapseOne" class="accordion-collapse collapse show"
